# cosmic-python-sandbox

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci_tests.yaml
mock_data/: basic_funcs.py  simple_fake_io.py
src/cosmic_python_sandbox/: __main__.py  event.py  events.py  fake_io_generation.py  fake_logger.py  handlers.py  io_mod.py  message_bus.py  parsers.py  uow.py
src/cosmic_python_sandbox/adapters/: clock.py  io_mod.py  logger.py  repo.py
src/cosmic_python_sandbox/adapters/fs_wrappers/: _fs_protocol.py
src/cosmic_python_sandbox/adapters/io_wrappers/: _io_protocol.py  pd_io.py  pd_wrapper.py  pl_io.py
src/cosmic_python_sandbox/event_handlers/: events.py  handlers.py
src/cosmic_python_sandbox/service_layer/: message_bus.py  uow.py
src/cosmic_python_sandbox/usecases/: __init__.py  _event.py  copy_file.py  delete_file.py  handlers.py  move_file.py
src/cosmic_python_sandbox/utils/: detect_io_infection.py  fake_io_generation.py
tests/: test_detect_io_infection.py  test_events.py  test_fake_io_generation.py  test_fake_logger.py  test_fakes_api.py  test_handlers.py  test_message_bus.py  test_parsers.py
tests/adapters/: test_fake_logger.py
tests/event_handlers/: test_events.py  test_handlers.py
tests/service_layer/: test_message_bus.py
tests/usecases/: test_events.py  test_handlers.py
tests/utils/: test_detect_io_infection.py  test_fake_io_generation.py
