[project]
name = "cosmic-python-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ed cuss", email = "edcussmusic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pandas>=2.2.3",
    "polars>=1.30.0",
]

[project.scripts]
cosmic-python-sandbox = "cosmic_python_sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
]

[tool.coverage.run]
omit = [
    ".venv/*",
    "./src/cosmic_python_sandbox/__main__.py",
]

[tool.vulture]
min_confidence = 75
make_whitelist = true
paths = ["src/"]
sort_by_size = false
verbose = false
